syntax = "proto3";

package plugin;

import "core/group.proto";

option java_package = "com.windchat.proto.plugin";
option java_outer_classname = "HaiGroupProfileProto";

// options for php
option php_namespace = "Akaxin\\Proto\\Plugin";

service HaiGroupProfileService {
    rpc profile (HaiGroupProfileRequest) returns (HaiGroupProfileResponse);
}

/**

获取群组资料
----


接口名
----

/hai/group/profile

错误码
----

- success
- error.alert

**/
message HaiGroupProfileRequest {
	string group_id = 1; //当前用户获取群组ID的资料信息
}

message HaiGroupProfileResponse {
	core.GroupProfile profile = 1; //群组资料页信息
}
